Completed XE Release
Added TOC to 2021-01-23 Journal Entry

Issue #5 "XE: Using discovered Python interpreter"

Updated Firewall Configuration

Resolved "XE: Firewall needs to be reloaded after rule changes #10"
- Split firewalls between Oracle listener and Enterprise Manager Express
- Added handler to reload firewall rules

Added untested code for Python3 on OL7

Added design journal entries

--- a/design_journal/2021_01_23.md
+++ b/design_journal/2021_01_23.md
@@ -7,6 +7,11 @@ configuration.
 
 # Table of Contents
 
+* [Rationale](#rationale)
+* [Design Options](#design-options)
+  * [Use Ansible Groups](#use-ansible-groups)
+    * [Ansible Group Names](#ansible-group-names)
+
 # Rationale
 
 The installation of Oracle 18C XE is relatively straight forward. There is no
